[gd_scene load_steps=12 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://controller.gd" type="Script" id=2]
[ext_resource path="res://ghost.tscn" type="PackedScene" id=3]
[ext_resource path="res://story.gd" type="Script" id=4]
[ext_resource path="res://borders.gd" type="Script" id=5]
[ext_resource path="res://Server.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://kongtext.ttf"

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = SubResource( 1 )

[sub_resource type="CircleShape2D" id=7]

[node name="controller" type="Node2D"]
script = ExtResource( 2 )
ghost_object = ExtResource( 3 )
border_val = 900
Server = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="time_loop" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="current_position" type="Label" parent="CanvasLayer/time_loop"]
margin_right = 716.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 5 )
text = "Current Position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="temporal_instability" type="Label" parent="CanvasLayer/time_loop"]
margin_top = 16.4599
margin_right = 716.0
margin_bottom = 158.46
custom_fonts/font = SubResource( 5 )
text = "Current Position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="splash" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="splash_panel" type="Panel" parent="CanvasLayer/splash"]
margin_left = -509.0
margin_top = -299.0
margin_right = 1031.0
margin_bottom = 606.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="CanvasLayer/splash"]
margin_left = 74.902
margin_top = 193.649
margin_right = 974.902
margin_bottom = 335.649
custom_fonts/font = SubResource( 4 )
text = "UNSTABLE TIME LOOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instructions" type="Label" parent="CanvasLayer/splash"]
margin_left = 276.772
margin_top = 317.894
margin_right = 992.772
margin_bottom = 459.895
custom_fonts/font = SubResource( 6 )
text = "Press Any Key To Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="story" type="Node2D" parent="CanvasLayer"]
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="CanvasLayer/story"]
margin_left = -378.458
margin_top = -131.104
margin_right = 1178.54
margin_bottom = 627.896
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/story"]
margin_left = 250.0
margin_top = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/story/MarginContainer"]
margin_right = 540.0
margin_bottom = 46.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="CanvasLayer/story/MarginContainer/VBoxContainer"]
margin_right = 540.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
text = "Find the 8 encryption codes"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code" type="Label" parent="CanvasLayer/story/MarginContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 540.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
text = "STORY SEGMENT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_over" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="game_over_panel" type="Panel" parent="CanvasLayer/game_over"]
margin_left = -509.0
margin_top = -299.0
margin_right = 1031.0
margin_bottom = 606.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="game_over_title" type="Label" parent="CanvasLayer/game_over"]
margin_left = 74.902
margin_top = 193.649
margin_right = 974.902
margin_bottom = 335.649
custom_fonts/font = SubResource( 4 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="continue" type="Label" parent="CanvasLayer/game_over"]
margin_left = 276.772
margin_top = 317.894
margin_right = 992.772
margin_bottom = 459.895
custom_fonts/font = SubResource( 6 )
text = "Try again..."
__meta__ = {
"_edit_use_anchors_": true
}

[node name="victory" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="victory_panel" type="Panel" parent="CanvasLayer/victory"]
margin_left = -509.0
margin_top = -299.0
margin_right = 1031.0
margin_bottom = 606.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="victory_title" type="Label" parent="CanvasLayer/victory"]
margin_left = 74.902
margin_top = 193.649
margin_right = 974.902
margin_bottom = 335.649
custom_fonts/font = SubResource( 4 )
text = "CONGRATS"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="play_again" type="Label" parent="CanvasLayer/victory"]
margin_left = 276.772
margin_top = 317.894
margin_right = 992.772
margin_bottom = 459.895
custom_fonts/font = SubResource( 6 )
text = "The timelines are safe!"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="player" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )
border_boundary = 1300

[node name="Camera2D" type="Camera2D" parent="player"]
current = true
limit_left = -1500
limit_top = -1500
limit_right = 1500
limit_bottom = 1500

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 7 )

[node name="borders" type="Polygon2D" parent="."]
position = Vector2( -39.3746, -52.0429 )
color = Color( 0.835294, 0.109804, 0.109804, 0 )
polygon = PoolVector2Array( 1300, 1300, -1300, 1300, -1300, -1300, 1300, -1300 )
script = ExtResource( 5 )
OutLine = Color( 0.219608, 0.105882, 0.498039, 1 )
